---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 01. 12. 2024
  Changes:
    - Changed inserter's arm visual lenght

---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 30. 11. 2024
  Bugfixes:
    - Fixed wrong offset for Kuxynator's Slim-Inserters
    - Fixed Long-Handed Inserter's recipe being hidden even if the setting was disabled [Doesn't affect Long Slim Inserter being always hidden]

---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 30. 11. 2024
  Graphics:
    - Added thumbnail

---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 30. 11. 2024
  Major Features:
    - Added inserter blacklists for direction and length changes
    - Support for Kuxynator's Slim-Inserters
  Changes:
    - Rewritten most of the code
    - Changed the mod's name
  Locale:
    - Fixed some typos

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 26. 11. 2024
  Minor Features:
    - Added a sound for changing settings
    - Added a notification for changing settings using keybinds

  Bugfixes:
    - Fixed a crash related to using keybinds outside inserters
    - Fixed incorrect keybind

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 26. 11. 2024
  Major Features:
    - Initial release.