@@ -35,3 +35,8 @@ jobs:
         with:
           artifacts: "dist/*"
           makeLatest: true
+
+      - name: Upload to Mod Portal
+        uses: lisekilis/Factorio-mod-portal-Upload@v1.0.0
+        env:
+            FACTORIO_API_TOKEN: ${{ secrets.FACTORIO_TOKEN }}
