@@ -1,6 +1,6 @@
 {
   "name": "delta-inserters",
-  "version": "2.0.3",
+  "version": "2.0.2",
   "factorio_version": "2.0",
   "title": "Simple Configurable Inserters [Δ]",
   "author": "AzzyBunn",
