@@ -19,16 +19,19 @@ blacklist-direction=Changing this inserter's direction is blacklisted
 blacklist-length=Changing this inserter's arm length is blacklisted
 
 [controls]
-inserter-config-direction=Change inserter's dropoff direction
+inserter-config-direction=Change inserter's dropoff direction clockwise
+inserter-config-direction-reverse=Change inserter's dropoff direction counterclockwise
 inserter-config-lane=Change inserter's target dropoff lane
 inserter-config-length=Change inserter's arm length
 
 [mod-setting-name]
 inserter-config-remove-long-inserters=Hide [recipe=long-handed-inserter] Long-Handed Inserter's Recipe
-inserter-config-length-blacklist=Insert confing blacklist: Length
-inserter-config-direction-blacklist=Insert confing blacklist: Direction
+inserter-config-length-blacklist=Insert confinguration blacklist: Length
+inserter-config-direction-blacklist=Insert confinguration blacklist: Direction
+inserter-config-gui-enabled=Enable Inserter confinguration GUI.
 
 [mod-setting-description]
 inserter-config-remove-long-inserters=Hides long inserter's recipe. [Doesn't remove existing instances of the recipe or existing [entity=long-handed-inserter] Long-Handed Inserters]
 inserter-config-length-blacklist=A list of inserter entity names that should not be able to change their arm length. [Comma-separated list]
 inserter-config-direction-blacklist=A list of inserter entity names that should not be able to change their dropoff direction. [Comma-separated list]
+inserter-config-gui-enabled=If enabled a small panel will be added to every Inserter's GUI.\nInserters are still able to be configured via keybinds even if this setting is disabled.
