@@ -7,11 +7,18 @@ data:extend({
 		default_value = true,
 	},
 	{
+		type = "bool-setting",
+		name = "inserter-config-gui-enabled",
+		order = "a-a",
+		setting_type = "runtime-per-user",
+		default_value = true,
+	},
+	{
 		type = "string-setting",
 		name = "inserter-config-length-blacklist",
 		order = "b-a",
 		setting_type = "runtime-global",
-		default_value = "burner-inserter",
+		default_value = (mods["delta"] and "") or "burner-inserter",
 		allow_blank = true,
 	},
 	{
@@ -19,7 +26,7 @@ data:extend({
 		name = "inserter-config-direction-blacklist",
 		order = "b-b",
 		setting_type = "runtime-global",
-		default_value = "burner-inserter",
+		default_value = (mods["delta"] and "") or "burner-inserter",
 		allow_blank = true,
 	}
 })
